# grace_v2

./: agent_support_example.py  agent_tools.py  celery_config.py  celery_tasks.py  config.py  config.yml  pyproject.toml  qdrant_client_wrapper.py  qdrant_delete_collection.py  requirements.txt  run_dev.sh  support_actions.py
.claude/: settings.json
.claude/agents/: advisor.md  hard-implementer.md
.github/workflows/: ci.yml
backend/app/: main.py  schemas.py
backend/app/api/: meta.py  support.py
backend/app/core/: gates.py  intervention_bridge.py  jobs.py  support_agent.py  verticals.py
backend/docs/: README.md  api_meta.md  api_support.md  confidence_flow_grace_vs_backend.md  core_gates.md  core_intervention_bridge.md  core_jobs.md  core_support_agent.md  core_verticals.md  install_and_setup.md  main.md  react_processing_flow.md  schemas.md
backend/tests/: conftest.py  test_api.py  test_intervention_bridge.py  test_support_agent_core.py
chunking/: __init__.py  async_api_client.py  csv_text_to_chunks_text_csv.py  prompts.py  requirements.txt
chunking/doc/: csv_text_to_chunks_text_csv.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AnswerCard.tsx  ConfirmModal.tsx  Markdown.tsx  QueryForm.tsx  StepTimeline.tsx
frontend/src/markdown/: parseMarkdown.test.ts  parseMarkdown.ts
frontend/src/state/: jobReducer.test.ts  jobReducer.ts
grace/: __init__.py  confidence.py  config.py  executor.py  llm_compat.py  planner.py  replan.py  schemas.py  tools.py
grace/doc/: agent_example_core8.md  agent_support_example.md  agent_support_example_flow.md  agent_support_verticals.md  benchmark.md  planner.md  tools.md
grace/docs/: benchmark.md  calibration.md  confidence.md  confidence_calibration.md  config.md  executor.md  grace.md  grace_core.md  grace_core_flow.md  intervention.md  llm_compat.md  replan.md  schemas.md  web_search.md
grace/step_trace/: README.md  _trace.py  benchmark.py  s0_arg.py  s1_profile.py  s2_plan.py  s3_execute.py  s4_confidence.py  s5_gate.py  s6_web.py  s7_no_info.py  s8_action.py  s9_render.py
grace/step_trace/docs/: README.md  s0_arg.md  s1_profile.md  s2_plan.md  s3_execute.md  s4_confidence.md  s5_gate.md  s6_web.md  s7_no_info.md  s8_action.md  s9_render.md
helper/: helper_api.py  helper_embedding.py  helper_embedding_fastembed.py  helper_embedding_sparse.py  helper_llm.py  helper_rag.py  helper_rag_qa.py  helper_text.py
logs/: grace_memory.jsonl
qa_generation/: evaluation.py  pipeline.py  semantic.py  smart_qa_generator.py
qa_generation/doc/: pipeline.md  semantic.md  smart_qa_generator.md
qa_qdrant/: __init__.py  _embedding_fix_note.txt  make_qa.py  make_qa_register_qdrant.py  register_to_qdrant.py
qa_qdrant/command/: list_collections.py
qa_qdrant/doc/: make_qa.md  qdrant_delete_collection.md  register_to_qdrant.md
services/: __init__.py  agent_service.py  config_service.py  dataset_service.py  qa_service.py  qdrant_service.py  token_service.py
services/doc/: __init__.md  agent_service.md  cache_service.md  config_service.md  dataset_service.md  file_service.md  json_service.md  log_service.md  prompts.md  qa_service.md  qdrant_service.md  token_service.md
