[project]
name = "grace-v2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

# ============================================================================
# ruff 設定（CI の lint ゲートと同一）
# ----------------------------------------------------------------------------
# select = E,F,I / ignore = E501。isort の分類ブレ（CI=未インストール vs
# ローカル=導入済）を防ぐため known-first-party を明示する。
# ============================================================================
[tool.ruff]
extend-exclude = [".venv", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
  "agent_cache", "agent_parallel_search", "agent_support_example", "agent_tools",
  "backend", "celery_config", "celery_tasks", "chunking", "config", "grace",
  "helper", "main", "models", "qa_generation", "qa_qdrant", "qdrant_client_wrapper",
  "regex_mecab", "services", "support_actions",
]
