[project]
name = "grace-v2"
version = "0.1.0"
description = "GRACE v2 - Japanese RAG Q&A / autonomous support agent (migrated modules)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Project Contributors" }
]
dependencies = [
  "aiofiles==24.1.0",
  "altair==5.5.0",
  "annotated-types==0.7.0",
  "anyio==4.10.0",
  "attrs==25.3.0",
  "blinker==1.9.0",
  "blis==1.3.0",
  "Brotli==1.1.0",
  "cachetools==6.1.0",
  "catalogue==2.0.10",
  "certifi==2025.8.3",
  "charset-normalizer==3.4.3",
  "click==8.2.1",
  "cloudpathlib==0.22.0",
  "confection==0.1.5",
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "cymem==2.0.11",
  "distro==1.9.0",
  "fastapi>=0.116.0",
  "ffmpy==0.5.0",
  "filelock==3.16.1",
  "fonttools==4.60.0",
  "fsspec==2024.12.0",
  "gitdb==4.0.12",
  "GitPython==3.1.45",
  "gradio==5.44.1",
  "gradio_client==1.12.1",
  "groovy==0.1.2",
  "grpcio==1.74.0",
  "h11==0.16.0",
  "h2==4.2.0",
  "hf-xet==1.1.9",
  "hpack==4.1.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "huggingface-hub==0.34.4",
  "hyperframe==6.1.0",
  "idna==3.10",
  "Jinja2==3.1.6",
  "jiter==0.10.0",
  "joblib==1.5.2",
  "jsonschema==4.25.1",
  "jsonschema-specifications==2025.4.1",
  "kiwisolver==1.4.9",
  "langcodes==3.5.0",
  "language_data==1.3.0",
  "marisa-trie==1.3.1",
  "markdown-it-py==4.0.0",
  "MarkupSafe==3.0.2",
  "matplotlib==3.10.6",
  "mdurl==0.1.2",
  "mecab-python3==1.0.10",
  "murmurhash==1.0.13",
  "narwhals==2.1.2",
  "numpy==2.3.2",
  "openai==1.100.2",
  "orjson==3.10.14",
  "packaging==25.0",
  "pandas==2.3.1",
  "pandas-stubs==2.3.2.250827",
  "pillow==11.3.0",
  "portalocker==3.2.0",
  "preshed==3.0.10",
  "protobuf==6.32.0",
  "psycopg2-binary==2.9.10",
  "pyarrow==21.0.0",
  "pydantic==2.11.7",
  "pydantic_core==2.33.2",
  "pydeck==0.9.1",
  "pydub==0.25.1",
  "Pygments==2.19.1",
  "pyparsing==3.2.5",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.1",
  "datasets>=4.1.1",
  "python-multipart==0.0.20",
  "pytz==2025.2",
  "PyYAML==6.0.2",
  "qdrant-client==1.15.1",
  "redis==6.2.0",
  "referencing==0.36.2",
  "regex==2025.9.18",
  "requests==2.32.5",
  "rich==13.9.4",
  "rpds-py==0.27.0",
  "safehttpx==0.1.6",
  "scikit-learn==1.7.2",
  "scipy==1.16.2",
  "seaborn==0.13.2",
  "semantic-version==2.10.0",
  "setuptools==75.8.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "smart_open==7.3.1",
  "smmap==5.0.2",
  "sniffio==1.3.1",
  "spacy==3.8.7",
  "spacy-legacy==3.0.12",
  "spacy-loggers==1.0.5",
  "SQLAlchemy==2.0.42",
  "srsly==2.5.1",
  "starlette==0.48.0",
  "streamlit==1.48.1",
  "tenacity==9.1.2",
  "thinc==8.3.6",
  "threadpoolctl==3.6.0",
  "tiktoken==0.11.0",
  "toml==0.10.2",
  "tomlkit==0.13.2",
  "tornado==6.5.2",
  "tqdm==4.67.1",
  "typer==0.15.1",
  "types-pytz==2025.2.0.20250809",
  "typing-inspection==0.4.1",
  "typing_extensions==4.14.1",
  "tzdata==2025.2",
  "unidic-lite==1.0.8",
  "urllib3==2.5.0",
  "uvicorn==0.34.0",
  "wasabi==1.1.3",
  "watchdog==6.0.0",
  "weasel==0.4.1",
  "websockets==14.1",
  "wrapt==1.17.3",
  "google-genai>=2.7.0",
  "celery>=5.6.3",
  "fastembed==0.7.4",
  "anthropic>=0.111.0",
  "duckduckgo-search>=8.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
]

# ============================================================================
# uv 設定
# ----------------------------------------------------------------------------
# 本リポジトリはフラット構成のアプリ（トップレベルに複数の module/package が
# 並ぶ）であり、ライブラリとしてビルド/インストールしない。package=false に
# することで `uv sync` は依存のみを .venv に導入し、コードはリポジトリルート
# 起点で実行する（run_dev.sh の `uv run uvicorn backend.app.main:app`）。
# ============================================================================
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
filterwarnings = [
    # google-genai SDK にテスト用 MagicMock を渡した際、enum 型フィールド走査で
    # 大量に出る無害な UserWarning（"... is not a valid <EnumType>"）を抑止する。
    "ignore:.*is not a valid.*:UserWarning:google.genai._common",
]

# ============================================================================
# ruff 設定（CI の lint ゲートと同一）
# ----------------------------------------------------------------------------
# select = E,F,I / ignore = E501。isort の分類ブレ（CI=未インストール vs
# ローカル=導入済）を防ぐため known-first-party を明示する。
# ============================================================================
[tool.ruff]
extend-exclude = [".venv", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
  "agent_cache", "agent_parallel_search", "agent_support_example", "agent_tools",
  "backend", "celery_config", "celery_tasks", "chunking", "config", "grace",
  "helper", "main", "models", "qa_generation", "qa_qdrant", "qdrant_client_wrapper",
  "regex_mecab", "services", "support_actions",
]
